myparser/minijava.jj
options
{
  JAVA_UNICODE_ESCAPE = true;
}

PARSER_BEGIN(MiniJavaParser)
package myparser;
import syntaxtree.*;

public class MiniJavaParser
{
}

PARSER_END(MiniJavaParser)

SKIP : /* WHITE SPACE */
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

SPECIAL_TOKEN : /* COMMENTS */
{
  < SINGLE_LINE_COMMENT :
    "//" (~[ "\n", "\r" ])*
    (
      "\n"
    | "\r"
    | "\r\n"
    ) >
| < FORMAL_COMMENT :
    "/**" (~[ "*" ])* "*"
    (
      "*"
    |
      (
        ~[ "*", "/" ] (~[ "*" ])* "*"
      )
    )*
    "/" >
| < MULTI_LINE_COMMENT :
    "/*" (~[ "*" ])* "*"
    (
      "*"
    |
      (
        ~[ "*", "/" ] (~[ "*" ])* "*"
      )
    )*
    "/" >
}

TOKEN : /* SEPARATORS */
{
  < LPAREN : "(" >
| < RPAREN : ")" >
| < LBRACE : "{" >
| < RBRACE : "}" >
| < LBRACKET : "[" >
| < RBRACKET : "]" >
| < SEMICOLON : ";" >
| < COMMA : "," >
| < DOT : "." >
}

TOKEN : /* OPERATORS */
{
  < BANG : "!" >
| < EXPONENTIAL : "**" >
| < DIVISION : "/" >
| < STAR : "*" >
| < LT : "<" >
| < OR : "||" >
| < SC_AND : "&&" >
| < PLUS : "+" >
| < MINUS : "-" >
| < ASSIGN : "=" >
}

/* RESERVED WORDS AND LITERALS */

TOKEN :
{
  < BOOLEAN : "boolean" >
| < CLASS : "class" >
| < ELSE : "else" >
| < EXTENDS : "extends" >
| < FALSE : "false" >
| < IF : "if" >
| < INT : "int" >
| < NEW : "new" >
| < PUBLIC : "public" >
| < RETURN : "return" >
| < STATIC : "static" >
| < THIS : "this" >
| < TRUE : "true" >
| < VOID : "void" >
| < WHILE : "while" >
| < PRINT : "System.out.println" >
| < MAIN : "main" >
| < STRING : "String" >
| < LENGTH : "length" >
| < FOR : "for" >
}

/* LITERALS */

TOKEN :
{
  < INTEGER_LITERAL :
    < DECIMAL_LITERAL >
  | < HEX_LITERAL >
  | < OCTAL_LITERAL > 
  >
| < #DECIMAL_LITERAL : [ "1"-"9" ] ([ "0"-"9" ])* >
| < #HEX_LITERAL : "0" [ "x", "X" ] ([ "0"-"9", "a"-"f", "A"-"F" ])+ >
| < #OCTAL_LITERAL : "0" ([ "0"-"7" ])* >
  //| < INVALID_HEX : "0" [ "x", "X" ] ([ "0"-"9", "a"-"z", "A"-"Z" ])* >
  //| < INVALID_OCTAL : "0" ([ "0"-"9" ])* >
}

/* IDENTIFIERS */

TOKEN :
{
  < IDENTIFIER :
    < LETTER >
    (
      < LETTER >
    | < DIGIT >
    )* >
| < #LETTER : 
    [ 
    "$", 
    "A"-"Z", 
    "_", 
    "a"-"z" 
    ] 
  >
| 
  < #DIGIT : 
    [ 
    "0"-"9" 
    ] 
  >
}

//
//TOKEN : /* LITERALS */
//{
//  < INTEGER_LITERAL: ( ["1"-"9"] (["0"-"9"])* | "0" ) >
//}
//
//TOKEN : /* IDENTIFIERS */
//{
//  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>)* >
//|
//  < #LETTER:
//      [
//       "$",
//       "A"-"Z",
//       "_",
//       "a"-"z",
//       "À"-"Ö",
//       "Ø"-"ö",
//       "ø"-"ÿ",
//       "Ā"-"῿",
//       "぀"-"㆏",
//       "㌀"-"㍿",
//       "㐀"-"㴭",
//       "一"-"鿿",
//       "豈"-"﫿"
//      ]
//  >
//|
//  < #DIGIT:
//      [
//       "0"-"9",
//       "٠"-"٩",
//       "۰"-"۹",
//       "०"-"९",
//       "০"-"৯",
//       "੦"-"੯",
//       "૦"-"૯",
//       "୦"-"୯",
//       "௧"-"௯",
//       "౦"-"౯",
//       "೦"-"೯",
//       "൦"-"൯",
//       "๐"-"๙",
//       "໐"-"໙",
//       "၀"-"၉"
//      ]
//  >
//}
//
/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/


Program Goal() :
{
  MainClass m;
  ClassDeclList cl = new ClassDeclList();
  ClassDecl c;
}
{
  m = MainClass()
  (
    c = ClassDeclaration()
    {
      cl.addElement(c);
    }
  )*
  < EOF >
  {
    return new Program(m, cl);
  }
}

MainClass MainClass() :
{
  Identifier i1, i2;
  Statement s;
}
{
  "class" i1 = Identifier() "{" 
  "public" "static" "void" "main" "(" "String" "[" "]" i2 = Identifier() ")" 
  "{" s = Statement() "}" 
  "}"
  {
    return new MainClass(i1, i2, s);
  }
}

ClassDecl ClassDeclaration() :
{
  ClassDecl c;
}
{
  (
    LOOKAHEAD(3)
    c = ClassDeclarationSimple()
  | 
    c = ClassDeclarationExtends()
  )
  {
    return c;
  }
}

ClassDecl ClassDeclarationSimple() :
{
  Identifier i;
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  MethodDecl m;
  MethodDeclList ml = new MethodDeclList();
}
{
  "class" i = Identifier() "{"
  (
    v = VarDeclaration()
    {
      vl.addElement(v);
    }
  )*
  (
    m = MethodDeclaration()
    {
      ml.addElement(m);
    }
  )*
  "}"
  {
    return new ClassDeclSimple(i, vl, ml);
  }
}

ClassDecl ClassDeclarationExtends() :
{
  Identifier i1, i2;
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  MethodDecl m;
  MethodDeclList ml = new MethodDeclList();
}
{
  "class" i1 = Identifier() "extends" i2 = Identifier() 
  "{"
  (
    v = VarDeclaration()
    {
      vl.addElement(v);
    }
  )*
  (
    m = MethodDeclaration()
    {
      ml.addElement(m);
    }
  )*
  "}"
  {
    return new ClassDeclExtends(i1, i2, vl, ml);
  }
}

VarDecl VarDeclaration() :
{
  Type t;
  Identifier i;
}
{
  t = Type() i = Identifier() ";"
  {
    return new VarDecl(t, i);
  }
}

MethodDecl MethodDeclaration() :
{
  Type t;
  Identifier i;
  FormalList fl = new FormalList();
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  Statement s;
  StatementList sl = new StatementList();
  Exp e;
}
{
  "public" t = Type() i = Identifier() 
  "("
  (
    fl = FormalParameterList()
  )?
  ")" 
  "{"
  (
    LOOKAHEAD(2)
    v = VarDeclaration()
    {
      vl.addElement(v);
    }
  )*
  (
    s = Statement()
    {
      sl.addElement(s);
    }
  )*
  "return" e = Expression() ";" "}"
  {
    return new MethodDecl(t, i, fl, vl, sl, e);
  }
}

FormalList FormalParameterList() :
{
  FormalList fl = new FormalList();
  Formal f;
}
{
  f = FormalParameter()
  {
    fl.addElement(f);
  }
  (
    f = FormalParameterRest()
    {
      fl.addElement(f);
    }
  )*
  {
    return fl;
  }
}

Formal FormalParameter() :
{
  Type t;
  Identifier i;
}
{
  t = Type() i = Identifier()
  {
    return new Formal(t, i);
  }
}

Formal FormalParameterRest() :
{
  Formal f;
}
{
  "," f = FormalParameter()
  {
    return f;
  }
}

Type Type() :
{
  Type t;
}
{
  (
    LOOKAHEAD(3)
    t = ArrayType()
  | 
    t = BooleanType()
  | 
    t = IntegerType()
  | 
    t = IdentifierType()
  )
  {
    return t;
  }
}

Type ArrayType() :
{}
{
  "int" "[" "]"
  {
    return new IntArrayType();
  }
}

Type BooleanType() :
{}
{
  "boolean"
  {
    return new BooleanType();
  }
}

Type IntegerType() :
{}
{
  "int"
  {
    return new IntegerType();
  }
}

Type IdentifierType() :
{
  Token t;
}
{
  t = < IDENTIFIER >
  {
    return new IdentifierType(t.image);
  }
}

Statement Statement() :
{
  Statement s;
}
{
  (
    s = Block()
  | 
    LOOKAHEAD(2)
    s = AssignmentStatement()
  | 
    LOOKAHEAD(2)
    s = ArrayAssignmentStatement()
  | 
    s = IfStatement()
  | 
    s = WhileStatement()
  | 
    s = PrintStatement()
  | 
    s = ForStatement()
  )
  {
    return s;
  }
}

Statement Block() :
{
  Statement s;
  StatementList sl = new StatementList();
}
{
  "{"
  (
    s = Statement()
    {
      sl.addElement(s);
    }
  )*
  "}"
  {
    return new Block(sl);
  }
}

Statement AssignmentStatement() :
{
  Identifier i;
  Exp e;
}
{
  i = Identifier() "=" e = Expression() ";"
  {
    return new Assign(i, e);
  }
}

Statement ArrayAssignmentStatement() :
{
  Identifier i;
  Exp e1, e2;
}
{
  i = Identifier() "[" e1 = Expression() "]" "=" e2 = Expression() ";"
  {
    return new ArrayAssign(i, e1, e2);
  }
}

Statement IfStatement() :
{
  Exp e;
  Statement s1, s2;
}
{
  "if" "(" e = Expression() ")" s1 = Statement() "else" s2 = Statement()
  {
    return new If(e, s1, s2);
  }
}

Statement WhileStatement() :
{
  Exp e;
  Statement s;
}
{
  "while" "(" e = Expression() ")" s = Statement()
  {
    return new While(e, s);
  }
}

Statement PrintStatement() :
{
  Exp e;
}
{
  "System.out.println" "(" e = Expression() ")" ";"
  {
    return new Print(e);
  }
}

Statement ForStatement() :
{
  ForInit f;
  Exp e;
  Statement s;
  StmtExprList l;
}
{
  "for" "(" f = ForInit() ";" e = Expression() ";" l = StmtExprList() ")" s = Statement()
  {
    return new For(f, e, l, s);
  }
}

ForInit ForInit() :
{
  ForInit f;
}
{
  (
    LOOKAHEAD(Type() Identifier())
    f = LocalVariableDeclaration()
  | 
    LOOKAHEAD(Identifier() "=")
    f = StmtExprList()
  )
  {
    return f;
  }
}

StmtExprList StmtExprList() :
{
  StmtExprList l = new StmtExprList();
  StmtExpr e;
}
{
  e = StmtExpr()
  {
    l.addElement(e);
  }
  (
    "," e = StmtExpr()
    {
      l.addElement(e);
    }
  )*
  {
    return l;
  }
}

StmtExpr StmtExpr() :
{
  Identifier i;
  Exp e;
  Exp e1;
  Exp e2;
}
{
  LOOKAHEAD(Identifier() "=")
  i = Identifier() "=" e = Expression()
  {
    return new AssignExpr(i, e);
  }
| 
  LOOKAHEAD(Identifier() "[")
  i = Identifier() "[" e1 = Expression() "]" "=" e2 = Expression()
  {
    return new ArrayAssignExpr(i, e1, e2);
  }
}

LocalVariableDeclList LocalVariableDeclaration() :
{
  LocalVariableDeclList l;
  LocalVariableDecl d1;
  LocalVariableDecl d2;
}
{
  d1 = LocalVariableDeclarationFirst()
  {
    l = new LocalVariableDeclList(d1.t);
    l.addElement(d1);
  }
  (
    d2 = LocalVariableDeclarationRest(d1.t)
    {
      l.addElement(d2);
    }
  )*
  {
    return l;
  }
}

LocalVariableDecl LocalVariableDeclarationFirst() :
{
  Type t;
  Identifier i;
  Exp e;
}
{
  t = Type() i = Identifier() "=" e = Expression()
  {
    return new LocalVariableDecl(t, i, e);
  }
}

LocalVariableDecl LocalVariableDeclarationRest(Type t) :
{
  Identifier i;
  Exp e;
}
{
  "," i = Identifier() "=" e = Expression()
  {
    return new LocalVariableDecl(t, i, e);
  }
}

Exp Expression() :
{
  Exp e;
}
{
  (
    e = OrExpression()
    //    LOOKAHEAD(PrimaryExpression() "&&")
    //    e = AndExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "||")
    //    e = OrExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "<")
    //    e = CompareExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "+")
    //    e = PlusExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "-")
    //    e = MinusExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "/")
    //    e = DivisionExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "*")
    //    e = TimesExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "**")
    //    e = ExponentialExpression()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "[")
    //    e = ArrayLookup()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "." "length")
    //    e = ArrayLength()
    //  | 
    //    LOOKAHEAD(PrimaryExpression() "." Identifier() "(")
    //    e = MessageSend()
    //  | 
    //    e = PrimaryExpression()
  )
  {
    return e;
  }
}

Exp OrExpression() :
{
  Exp e1, e2;
  Exp r;
}
{
  e1 = AndExpression()
  (
    "||" e2 = AndExpression()
    {
      e1 = new Or(e1, e2);
    }
  )*
  {
    return e1;
  }
}

Exp AndExpression() :
{
  Exp e1, e2;
}
{
  e1 = CompareExpression()
  (
    "&&" e2 = CompareExpression()
    {
      e1 = new And(e1, e2);
    }
  )*
  {
    return e1;
  }
}

Exp CompareExpression() :
{
  Exp e1, e2;
}
{
  e1 = AdditiveExpression()
  (
    "<" e2 = AdditiveExpression()
    {
      e1 = new LessThan(e1, e2);
    }
  )*
  {
    return e1;
  }
}

Exp AdditiveExpression() :
{
  Exp e1, e2;
  Token op;
}
{
  e1 = MultiplicativeExpression()
  (
    LOOKAHEAD(("+"
  | "-") MultiplicativeExpression())
    (
      op = "+"
    | op = "-"
    )
    e2 = MultiplicativeExpression()
    {
      if (op.image == "+")
      {
        e1 = new Plus(e1, e2);
      }
      else
      {
        e1 = new Minus(e1, e2);
      }
    }
  )*
  {
    return e1;
  }
}

Exp PlusExpression() :
{
  Exp e1, e2;
}
{
  e1 = PrimaryExpression() "+" e2 = PrimaryExpression()
  {
    return new Plus(e1, e2);
  }
}

Exp MinusExpression() :
{
  Exp e1, e2;
}
{
  e1 = PrimaryExpression() "-" e2 = PrimaryExpression()
  {
    return new Minus(e1, e2);
  }
}

Exp MultiplicativeExpression() :
{
  Exp e1, e2;
  Token op;
}
{
  e1 = ExponentialExpression()
  (
    LOOKAHEAD(("*"
  | "/") ExponentialExpression())
    (
      op = "*"
    | op = "/"
    )
    e2 = ExponentialExpression()
    {
      //      e1 = new Multiplicative(e1, e2, op.image);
      if (op.image == "*")
      {
        e1 = new Times(e1, e2);
      }
      else
      {
        e1 = new Divides(e1, e2);
      }
    }
  )*
  {
    return e1;
  }
}

Exp DivisionExpression() :
{
  Exp e1, e2;
}
{
  e1 = PrimaryExpression() "/" e2 = PrimaryExpression()
  {
    return new Divides(e1, e2);
  }
}

Exp TimesExpression() :
{
  Exp e1, e2;
}
{
  e1 = PrimaryExpression() "*" e2 = PrimaryExpression()
  {
    return new Times(e1, e2);
  }
}

Exp ExponentialExpression() :
{
  Exp e1, e2;
}
{
  e1 = UnaryExpression()
  [
    "**" e2 = ExponentialExpression()
    {
      return new Exponential(e1, e2);
    }
  ]
  {
    return e1;
  }
}

Exp UnaryExpression() :
{
  Exp e;
  Token op;
}
{
  (
    op = "!" e = UnaryExpression()
    {
      return new Not(e);
    }
  | 
    op = "-" e = UnaryExpression()
    {
      return new UnaryMinus(e);
    }
  | 
    e = AccessExpression()
    {
      return e;
    }
  )
 
}

Exp AccessExpression() :
{
  Exp e;
}
{
  (
    LOOKAHEAD(PrimaryExpression() "[")
    e = ArrayLookup()
  | LOOKAHEAD(PrimaryExpression() "." "length")
    e = ArrayLength()
  | LOOKAHEAD(PrimaryExpression() "." Identifier() "(")
    e = MessageSend()
  | e = PrimaryExpression()
  )
  {
    return e;
  }
}

Exp ArrayLookup() :
{
  Exp e1, e2;
}
{
  e1 = PrimaryExpression() "[" e2 = PrimaryExpression() "]"
  {
    return new ArrayLookup(e1, e2);
  }
}

Exp ArrayLength() :
{
  Exp e;
}
{
  e = PrimaryExpression() "." "length"
  {
    return new ArrayLength(e);
  }
}

Exp MessageSend() :
{
  Exp e;
  Identifier i;
  ExpList el = new ExpList();
}
{
  e = PrimaryExpression() "." i = Identifier() 
  "("
  (
    el = ExpressionList()
  )?
  ")"
  {
    return new Call(e, i, el);
  }
}

ExpList ExpressionList() :
{
  Exp e1, e2;
  ExpList el = new ExpList();
}
{
  e1 = Expression()
  {
    el.addElement(e1);
  }
  (
    e2 = ExpressionRest()
    {
      el.addElement(e2);
    }
  )*
  {
    return el;
  }
}

Exp ExpressionRest() :
{
  Exp e;
}
{
  "," e = Expression()
  {
    return e;
  }
}

Exp PrimaryExpression() :
{
  Exp e;
}
{
  (
    e = IntegerLiteral()
  | 
    e = TrueLiteral()
  | 
    e = FalseLiteral()
  | 
    e = IdentifierExp()
  | 
    e = ThisExpression()
  | 
    LOOKAHEAD(3)
    e = ArrayAllocationExpression()
  | 
    e = AllocationExpression()
  | 
    e = BracketExpression()
  )
  {
    return e;
  }
}

Exp UnaryMinusExpression() :
{
  Exp e;
}
{
  "-" e = Expression()
  {
    return new UnaryMinus(e);
  }
}

Exp IntegerLiteral() :
{
  Token t;
}
{
  t = < INTEGER_LITERAL >
  {
    return new IntegerLiteral(Integer.parseInt(t.image));
  }
}

Exp TrueLiteral() :
{}
{
  "true"
  {
    return new True();
  }
}

Exp FalseLiteral() :
{}
{
  "false"
  {
    return new False();
  }
}

Exp IdentifierExp() :
{
  Token t;
}
{
  t = < IDENTIFIER >
  {
    return new IdentifierExp(t.image);
  }
}

Exp ThisExpression() :
{}
{
  "this"
  {
    return new This();
  }
}

Exp ArrayAllocationExpression() :
{
  Exp e;
}
{
  "new" "int" "[" e = Expression() "]"
  {
    return new NewArray(e);
  }
}

Exp AllocationExpression() :
{
  Identifier i;
}
{
  "new" i = Identifier() "(" ")"
  {
    return new NewObject(i);
  }
}

Exp NotExpression() :
{
  Exp e;
}
{
  "!" e = Expression()
  {
    return new Not(e);
  }
}

Exp BracketExpression() :
{
  Exp e;
}
{
  "(" e = Expression() ")"
  {
    return e;
  }
}

Identifier Identifier() :
{
  Token t;
}
{
  t = < IDENTIFIER >
  {
    return new Identifier(t.image);
  }
}
