myparser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package myparser;
import syntaxtree.*;

public class MiniJavaParser implements MiniJavaParserConstants {
  public static boolean hasError = false;

//
//TOKEN : /* LITERALS */
//{
//  < INTEGER_LITERAL: ( ["1"-"9"] (["0"-"9"])* | "0" ) >
//}
//
//TOKEN : /* IDENTIFIERS */
//{
//  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>)* >
//|
//  < #LETTER:
//      [
//       "$",
//       "A"-"Z",
//       "_",
//       "a"-"z",
//       "?"-"??",
//       "??"-"Ã¶",
//       "Ã¸"-"Ã¿",
//       "?"-"á¿?",
//       "??"-"???",
//       "??"-"?¿",
//       "??"-"ã´?",
//       "ä¸?"-"é¿?",
//       "ï¤?"-"ï«?"
//      ]
//  >
//|
//  < #DIGIT:
//      [
//       "0"-"9",
//       "??"-"Ù©",
//       "Û°"-"Û¹",
//       "à¥?"-"à¥?",
//       "à§?"-"à§?",
//       "à©?"-"à©?",
//       "à«?"-"à«?",
//       "à­?"-"à­?",
//       "à¯?"-"à¯?",
//       "à±?"-"à±?",
//       "à³?"-"à³?",
//       "àµ?"-"àµ?",
//       "à¹?"-"à¹?",
//       "à»?"-"à»?",
//       "??"-"???"
//      ]
//  >
//}
//
/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/
  static final public Program Goal() throws ParseException {
  MainClass m;
  ClassDeclList cl = new ClassDeclList();
  ClassDecl c;
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDeclaration();
      cl.addElement(c);
    }
    jj_consume_token(0);
    {if (true) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
  Identifier i1, i2;
  Statement s;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    i2 = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
    {if (true) return new MainClass(i1, i2, s);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclaration() throws ParseException {
  ClassDecl c;
    if (jj_2_1(3)) {
      c = ClassDeclarationSimple();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        c = ClassDeclarationExtends();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclarationSimple() throws ParseException {
  Identifier i;
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  MethodDecl m;
  MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = VarDeclaration();
      vl.addElement(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDeclaration();
      ml.addElement(m);
    }
    jj_consume_token(RBRACE);
    {if (true) return new ClassDeclSimple(i, vl, ml);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclarationExtends() throws ParseException {
  Identifier i1, i2;
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  MethodDecl m;
  MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(EXTENDS);
    i2 = Identifier();
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      v = VarDeclaration();
      vl.addElement(v);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      m = MethodDeclaration();
      ml.addElement(m);
    }
    jj_consume_token(RBRACE);
    {if (true) return new ClassDeclExtends(i1, i2, vl, ml);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDeclaration() throws ParseException {
  Type t;
  Identifier i;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMICOLON);
    {if (true) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDeclaration() throws ParseException {
  Type t;
  Identifier i;
  FormalList fl = new FormalList();
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  Statement s;
  StatementList sl = new StatementList();
  Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    try {
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case IDENTIFIER:
        fl = FormalParameterList();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
    } catch (ParseException exception) {
    System.out.println("Line " + token.beginLine + " Column " + token.beginColumn + ": invalid formal parameter list");
    hasError = true;
    Token tk;
    do
    {
      tk = getNextToken();
    }
    while (tk.kind != RPAREN);
    }
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      v = VarDeclaration();
      vl.addElement(v);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case FOR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      s = Statement();
      sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
    {if (true) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalParameterList() throws ParseException {
  FormalList fl = new FormalList();
  Formal f;
    f = FormalParameter();
    fl.addElement(f);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
      case BOOLEAN:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      f = FormalParameterRest();
      fl.addElement(f);
    }
    {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalParameter() throws ParseException {
  Type t = null;
  Identifier i = null;
    if (jj_2_3(2147483647)) {
      t = Type();
      i = Identifier();
    {if (true) return new Formal(t, i);}
    } else if (jj_2_4(2147483647)) {
      t = Type();
    System.out.println("Line " + token.beginLine + " Column " + token.beginColumn + ": identifier expected");
    hasError = true;
    {if (true) return new Formal(t, i);}
    } else if (jj_2_5(2147483647)) {
      i = Identifier();
    System.out.println("Line " + token.beginLine + " Column " + token.beginColumn + ": identifier expected");
    hasError = true;
    {if (true) return new Formal(t, i);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalParameterRest() throws ParseException {
  Formal f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      f = FormalParameter();
    {if (true) return f;}
      break;
    case BOOLEAN:
    case INT:
    case IDENTIFIER:
      f = FormalParameter();
    System.out.println("Line " + token.beginLine + " Column " + token.beginColumn + ": , expected");
    hasError = true;
    {if (true) return f;}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
  Type t;
    if (jj_2_6(3)) {
      t = ArrayType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        t = BooleanType();
        break;
      case INT:
        t = IntegerType();
        break;
      case IDENTIFIER:
        t = IdentifierType();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Type ArrayType() throws ParseException {
    jj_consume_token(INT);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    {if (true) return new IntArrayType();}
    throw new Error("Missing return statement in function");
  }

  static final public Type BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
    {if (true) return new BooleanType();}
    throw new Error("Missing return statement in function");
  }

  static final public Type IntegerType() throws ParseException {
    jj_consume_token(INT);
    {if (true) return new IntegerType();}
    throw new Error("Missing return statement in function");
  }

  static final public Type IdentifierType() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
    {if (true) return new IdentifierType(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
  Statement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      s = Block();
      break;
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_7(2)) {
        s = AssignmentStatement();
      } else if (jj_2_8(2)) {
        s = ArrayAssignmentStatement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          s = IfStatement();
          break;
        case WHILE:
          s = WhileStatement();
          break;
        case PRINT:
          s = PrintStatement();
          break;
        case FOR:
          s = ForStatement();
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Block() throws ParseException {
  Statement s;
  StatementList sl = new StatementList();
    jj_consume_token(LBRACE);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case FOR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_9;
      }
      s = Statement();
      sl.addElement(s);
    }
    jj_consume_token(RBRACE);
    {if (true) return new Block(sl);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement AssignmentStatement() throws ParseException {
  Identifier i;
  Exp e;
    i = Identifier();
    jj_consume_token(ASSIGN);
    e = Expression();
    jj_consume_token(SEMICOLON);
    {if (true) return new Assign(i, e);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement ArrayAssignmentStatement() throws ParseException {
  Identifier i;
  Exp e1, e2;
    i = Identifier();
    jj_consume_token(LBRACKET);
    e1 = Expression();
    jj_consume_token(RBRACKET);
    jj_consume_token(ASSIGN);
    e2 = Expression();
    jj_consume_token(SEMICOLON);
    {if (true) return new ArrayAssign(i, e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement IfStatement() throws ParseException {
  Exp e;
  Statement s1, s2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
    {if (true) return new If(e, s1, s2);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement WhileStatement() throws ParseException {
  Exp e;
  Statement s;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s = Statement();
    {if (true) return new While(e, s);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement PrintStatement() throws ParseException {
  Exp e;
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
    {if (true) return new Print(e);}
    throw new Error("Missing return statement in function");
  }
